@@ -2,6 +2,7 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.0.6  --> 1.0.X  :
+		- fixed a bug in partial_on_noforce.
 		- fixed a bug with no-nfo symlinks and false parentdir.
 v1.0.5  --> 1.0.6  : (2195)
 		- fixed a bug with lenient compare, which mostly affected mp3-releases.
